premier commit