@@ -8,6 +8,7 @@ import io.bootify.wallet.repos.TransactionRepository;
 import io.bootify.wallet.util.NotFoundException;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
@@ -20,16 +21,22 @@ public class TransactionService {
     private final AccountRepository accountRepository;
 
     public TransactionService(final TransactionRepository transactionRepository,
-            final AccountRepository accountRepository) {
+                              final AccountRepository accountRepository) {
         this.transactionRepository = transactionRepository;
         this.accountRepository = accountRepository;
     }
 
     public List<TransactionDTO> findAll() {
+
+     //   final List<Transaction> transactions = transactionRepository.findAll(Sort.by("id"));
+       // return transactions.stream()
+              //  .map(transaction -> mapToDTO(transaction, new TransactionDTO()))
+               // .toList();
+
         final List<Transaction> transactions = transactionRepository.findAll(Sort.by("id"));
         return transactions.stream()
                 .map(transaction -> mapToDTO(transaction, new TransactionDTO()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public TransactionDTO get(final Long id) {
@@ -56,7 +63,7 @@ public class TransactionService {
     }
 
     private TransactionDTO mapToDTO(final Transaction transaction,
-            final TransactionDTO transactionDTO) {
+                                    final TransactionDTO transactionDTO) {
         transactionDTO.setId(transaction.getId());
         transactionDTO.setHeuretrans(transaction.getHeuretrans());
         transactionDTO.setMontant(transaction.getMontant());
@@ -68,7 +75,7 @@ public class TransactionService {
     }
 
     private Transaction mapToEntity(final TransactionDTO transactionDTO,
-            final Transaction transaction) {
+                                    final Transaction transaction) {
         transaction.setHeuretrans(transactionDTO.getHeuretrans());
         transaction.setMontant(transactionDTO.getMontant());
         transaction.setCptSource(transactionDTO.getCptSource());
@@ -81,51 +88,51 @@ public class TransactionService {
     }
 
     public void transferMoney(Long sourceAccountId, Long targetAccountId, double amount) {
-        // Vérifiez si les comptes source et cible existent
+        // Vérifier si les comptes source et cible existent
         Optional<Account> optionalSourceAccount = accountRepository.findById(sourceAccountId);
         Optional<Account> optionalTargetAccount = accountRepository.findById(targetAccountId);
 
-        if (optionalSourceAccount.isEmpty() || optionalTargetAccount.isEmpty()) {
+        if (optionalSourceAccount.isPresent() && optionalTargetAccount.isPresent()) {
+            Account sourceAccount = optionalSourceAccount.get();
+            Account targetAccount = optionalTargetAccount.get();
+
+            // Vérifier si le montant du transfert est valide
+            if (amount <= 0) {
+                throw new IllegalArgumentException("Le montant du transfert doit être positif");
+            }
+
+            double sourceBalance = Double.parseDouble(sourceAccount.getSolde());
+
+            // Vérifier si le solde du compte source est suffisant
+            if (sourceBalance < amount) {
+                throw new IllegalArgumentException("Solde insuffisant pour effectuer le transfert");
+            }
+
+            // Effectuer le transfert en mettant à jour les soldes des comptes
+            String newSourceBalance = String.valueOf(sourceBalance - amount);
+            sourceAccount.setSolde(newSourceBalance);
+
+            double targetBalance = Double.parseDouble(targetAccount.getSolde());
+            String newTargetBalance = String.valueOf(targetBalance + amount);
+            targetAccount.setSolde(newTargetBalance);
+
+            // Enregistrer la transaction de transfert dans la base de données
+            Transaction transferTransaction = new Transaction();
+            transferTransaction.setMontant(amount);
+            transferTransaction.setCptSource(sourceAccount.getId());
+            transferTransaction.setCptDest(targetAccount.getId());
+            transferTransaction.setType("Transfert");
+            transactionRepository.save(transferTransaction);
+
+            // Enregistrer les mises à jour des comptes dans la base de données
+            accountRepository.save(sourceAccount);
+            accountRepository.save(targetAccount);
+        } else {
             throw new NotFoundException("Compte source ou cible non trouvé");
         }
 
-        Account sourceAccount = optionalSourceAccount.get();
-        Account targetAccount = optionalTargetAccount.get();
 
-        // Vérifiez si le montant du transfert est valide
-        if (amount <= 0) {
-            throw new IllegalArgumentException("Le montant du transfert doit être positif");
-        }
-
-        double sourceBalance = Double.parseDouble(sourceAccount.getSolde());
-
-        // Vérifiez si le solde du compte source est suffisant
-        if (sourceBalance < amount) {
-            throw new IllegalArgumentException("Solde insuffisant pour effectuer le transfert");
-        }
-
-        // Effectuez le transfert en mettant à jour les soldes des comptes
-        String newSourceBalance = String.valueOf(sourceBalance - amount);
-        sourceAccount.setSolde(newSourceBalance);
-
-        double targetBalance = Double.parseDouble(targetAccount.getSolde());
-        String newTargetBalance = String.valueOf(targetBalance + amount);
-        targetAccount.setSolde(newTargetBalance);
-
-        // Enregistrez la transaction de transfert dans la base de données
-        Transaction transferTransaction = new Transaction();
-        transferTransaction.setMontant(amount);
-        transferTransaction.setCptSource(sourceAccount.getId());
-        transferTransaction.setCptDest(targetAccount.getId());
-        transferTransaction.setType("Transfert");
-        transactionRepository.save(transferTransaction);
-
-        // Enregistrez les mises à jour des comptes dans la base de données
-        accountRepository.save(sourceAccount);
-        accountRepository.save(targetAccount);
     }
-
-
 }
 
 
